# commerce-backend

./: .env.example  .gitignore  .pre-commit-config.yaml  GEMINI.md  README.md  pyproject.toml
.github/: copilot-instructions.md
.github/agents/: api-dev.agent.md  architect.agent.md  business-logic.agent.md  data-engineer.agent.md  db-admin.agent.md  devops-engineer.agent.md  domain-expert.agent.md  interface-specialist.agent.md  project-lead.agent.md  qa-devops.agent.md  security-engineer.agent.md  tech-lead.agent.md
.github/prompts/: architecture.prompt.md  conventions.prompt.md  tech-stack.prompt.md
.github/skills/: create-domain.skill.md  create-usecase.skill.md  generate-test.skill.md  scaffold-api.skill.md
.github/workflows/: ci.yaml
app/: containers.py  main.py
app/api/: root.py  routes.py
app/api/v1/: __init__.py  users.py
app/application/dto/: cart_dto.py  order_dto.py  product_dto.py  response.py  seller_dto.py  token.py  user_dto.py
app/application/use_cases/: cart_use_case.py  order_use_case.py  product_use_case.py  seller_use_case.py  user_use_case.py
app/core/: config.py  db.py  decorators.py  exception_handlers.py  exceptions.py  route_names.py  security.py  types.py
app/domain/: exceptions.py  user.py
app/domain/model/: cart.py  order.py  product.py  seller.py  user.py
app/domain/ports/: cart_repository.py  order_repository.py  product_repository.py  seller_repository.py  unit_of_work.py  user_repository.py
app/infrastructure/api/: routes.py
app/infrastructure/api/v1/: __init__.py  carts.py  orders.py  products.py  users.py
app/infrastructure/persistence/: cart_repository.py  order_repository.py  product_repository.py  seller_repository.py  unit_of_work.py  user_repository.py
app/infrastructure/persistence/models/: cart_entity.py  order_entity.py  product_entity.py  seller_entity.py  user_entity.py
app/repositories/: user_repository.py
app/schemas/: base.py  response.py  token.py  user.py
app/services/: user_service.py
tests/: conftest.py
tests/fakes/: fake_unit_of_work.py
tests/fakes/repositories/: fake_cart_repository.py  fake_order_repository.py  fake_product_repository.py  fake_seller_repository.py  fake_user_repository.py
tests/integration/v1/carts/: helpers.py  test_add_item.py  test_get_cart.py  test_remove_item.py  test_update_item.py
tests/integration/v1/concurrency/: test_retry.py
tests/integration/v1/orders/: helpers.py  test_checkout.py  test_order_cancel.py  test_order_create.py  test_order_detail.py  test_order_list.py
tests/integration/v1/products/: helpers.py  test_product_create.py  test_product_detail.py  test_product_list.py  test_product_permission.py
tests/integration/v1/users/: helpers.py  test_login.py  test_profile.py  test_seller_info.py  test_user_create.py
tests/unit/application/: test_product_use_case.py  test_user_use_case.py
tests/unit/domain/: test_cart.py  test_order.py  test_product.py
tests/v1/: test_products.py  test_users.py
tests/v1/carts/: test_add_item.py  test_get_cart.py  test_remove_item.py  test_update_item.py
tests/v1/orders/: helpers.py  test_checkout.py  test_order_cancel.py  test_order_create.py  test_order_detail.py  test_order_list.py
tests/v1/products/: helpers.py  test_product_create.py  test_product_detail.py  test_product_list.py  test_product_permission.py
tests/v1/users/: helpers.py  test_login.py  test_profile.py  test_seller_info.py  test_user_create.py
