[project]
name = "backend"
version = "0.1.0"
description = ""
authors = [
    {name = "Flynn Park",email = "wphestiraid@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi[standard] (>=0.118.0,<0.119.0)",
    "dependency-injector (>=4.48.2,<5.0.0)",
    "pydantic-settings (>=2.11.0,<3.0.0)",
    "sqlmodel (>=0.0.25,<0.0.26)",
    "bcrypt (>=5.0.0,<6.0.0)",
    "email-validator (>=2.3.0,<3.0.0)",
    "aiosqlite (>=0.21.0,<0.22.0)",
    "PyJWT (>=2.8.0,<3.0.0)",
    "greenlet (>=3.3.0,<4.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
packages = [{include = "app"}]

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.2"
ruff = "^0.13.3"
mypy = "^1.18.2"
black = "^25.9.0"

[tool.ruff]
line-length = 120
indent-width = 4
target-version = "py313"
fix = true

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "C",  # flake8-comprehensions
    "B",  # flake8-bugbear
    "UP", # pyupgrade
    "PL", # pylint
]

[tool.black]
line-length = 120
target-version = ['py313']


[tool.mypy]
python_version = "3.13"
packages = ["app"]
strict = true

[tool.pytest.ini_options]
filterwarnings = [
    "ignore::DeprecationWarning:starlette._exception_handler",
    "ignore::DeprecationWarning:_pytest.python",
]

[tool.pyright]
typeCheckingMode = "basic"
venv = ".venv"
reportMissingImports = true
reportUnusedImport = true
reportUnusedVariable = true
